--- a/src/DiscordBot.Client/DiscordBot.Client.csproj
+++ b/src/DiscordBot.Client/DiscordBot.Client.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5D35D32E-C5DA-4C6B-9490-C207DF01B8BD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ZoneTest</RootNamespace>
-    <AssemblyName>ZoneTest</AssemblyName>
+    <RootNamespace>DiscordBot.Client</RootNamespace>
+    <AssemblyName>DiscordBot.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
