--- a/src/DiscordBot.Client/DiscordBot.Client.csproj
+++ b/src/DiscordBot.Client/DiscordBot.Client.csproj
@@ -85,8 +85,10 @@
     <Compile Include="AppSettings.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="Operation\DiceOperation.cs" />
+    <Compile Include="Operation\EchoOperation.cs" />
     <Compile Include="Operation\FormattedModuleBase.cs" />
     <Compile Include="Operation\HrOperaion.cs" />
+    <Compile Include="Operation\PerkOperation.cs" />
     <Compile Include="Operation\TimerOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
